Vectorized uick sort.